# MatrixTyper

./: .gitignore  README.md  liberty-clone.apk  package-lock.json  package.json
.github/workflows/: android-build.yml  build-backrooms-apk.yml
accountabillibuddy/: build-apk.sh  settings.gradle.kts
accountabillibuddy/app/: build.gradle.kts
accountabillibuddy/app/src/main/: AndroidManifest.xml
accountabillibuddy/app/src/main/assets/www/: index.html
accountabillibuddy/app/src/main/assets/www/css/: app.css
accountabillibuddy/app/src/main/assets/www/js/: app.js
accountabillibuddy/app/src/main/java/com/accountabillibuddy/app/: BootReceiver.java  MainActivity.java  ReminderReceiver.java  ReminderScheduler.java
accountabillibuddy/dev-server/: mock-supabase.js  supabase-schema.sql
accountabillibuddy/keystore/: dev.jks
backrooms/: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
backrooms/src/: audio.js  controls.js  entity.js  hud.js  main.js  maze.js  textures.js  world.js
gta-game/: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
gta-game/src/: input.js  main.js  style.css
planning/: ACCOUNTABILLIBUDDY_PLAN.md  GAME_DESIGN.md
src/: editor.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryptor.rs  lib.rs
